added api documentation
